--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ figure h2{
 
 <script   src="https://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
-<script src="./terry.binder.js"></script>
+<script src="./terry-binder.js"></script>
 <script src="./assets/js/bootstrap.min.js"></script>
 
 <script>
