fixed typo in demo. weeeeoooo

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ figure h2{
 <div class="container">
 	<div class="row">
 		<div class="col-xs-12">
-			<div class="jumbotron"><h1>The TERRY Binder!</h1><small>a simple jQuery data binder. Originally forked from forked from <em>petersirka/jquery.bindings</em></small></div>
+			<div class="jumbotron"><h1>The TERRY Binder!</h1><small>a simple jQuery data binder. Originally forked from <em>petersirka/jquery.bindings</em></small></div>
 			<div id="container" data-name="obj">
 				<p>Just write some stuff in this super ghetto-oldschool-retro form i got der...</p>
 				<div class="bs-example">
