--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@ input.form-control, select.form-control{ background: white; color: black; min-he
 figure{color: yellow;background: teal; padding: 20px;	margin-bottom: 20px;}
 div#editohya {	background-color: white; padding:15px; height: 50px; width:100%;color:black;margin-bottom:15px; }
 hr { border-top: 2px solid #ffffff; }
+@media only screen and (min-width : 768px) {
+	.is-table-row {display: table; width: 100%;}
+	.is-table-row [class*="col-"] { float: none;display: table-cell; vertical-align: top;}
+}
 @-webkit-keyframes rainbow {
 	0% {color: #ff0000;}
 	10% {color: #ff8000;}
@@ -94,10 +98,9 @@ hr { border-top: 2px solid #ffffff; }
 	<div id="container" data-name="obj">
 		<p>Just write some stuff in this super ghetto-oldschool-retro form i got her and see it be bound!</p>
 		<hr>
-		<div class="row">
-			<div class="col-sm-6">
+		<div class="row-fluid is-table-row">
+			<div class="col-sm-6 bs-example">
 					<h1>The Form:</h1>
-				<div class="bs-example">
 					<div class="form-group">
 						<label>Some Property</label>
 						<input class="form-control" type="text" data-model="property" />
@@ -122,7 +125,6 @@ hr { border-top: 2px solid #ffffff; }
 						<label>Property in a content-editable div</label>
 						<div id="editohya" style="" contenteditable="true" data-model="property"></div>
 					</div>
-				</div>	
 			</div>
 			<div class="col-sm-6">
 				<h2 class="rainbow">Check out my sweetness that is bindings!</h2>
@@ -136,7 +138,7 @@ hr { border-top: 2px solid #ffffff; }
 				<pre id="jsondump"></pre>
 			</div>
 		</div>
-		<div class="form-group text-center">
+		<div class="form-group text-center" style="padding-top: 20px;">
 			<a class="btn btn-success btn-lg" href="https://github.com/froggr/terry.binder.js">GITHUB BAM!</a>
 		</div>
 	</div>
