update to allow for data to be passed to create a model

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ ol>li { list-style-type: decimal; padding-bottom: 10px;}
   <div class="container" >
 	  <div class="jumbotron"><img src="./assets/img/terry.gif" class="terrylogo"/><small>a simple jQuery data binder. Originally forked from <em>petersirka/jquery.bindings</em></small>
 	  </div>
-	  <div id="container" data-model-name="obj" data-bind-on-load>
+	  <div id="container" data-model-name="obj" data-bind-on-loa>
 		  <p>Just write some stuff in this super ghetto-oldschool-retro form i got her and see it be bound!</p>
 		  <hr>
 		  <div class="row">
@@ -226,17 +226,23 @@ ol>li { list-style-type: decimal; padding-bottom: 10px;}
 
 <script>
 
-$.binder.model["obj"] = {
+/*$.binder.model["obj"] = {
+				property : 'test',
+				somearray: ["chips", "candy", "pop"],
+				gender: 'male', 
+				select: '2'
+			};*/
+
+$.binder.model["second"] = { title : 'oh yeah!' };
+
+ $.binder.model.obj = {
 				property : 'test',
 				somearray: ["chips", "candy", "pop"],
 				gender: 'male', 
 				select: '2'
 			};
 
-$.binder.model["second"] = { title : 'oh yeah!' };
-
-
-//$('#container').binder('create')(obj, '#container');
+$('#container').binder('create');
 //$.fn.binder('create');
 
 $('#container').on('model-update', function(e, model, path) {
