--- a/index.html
+++ b/index.html
@@ -317,14 +317,13 @@ ol>li { list-style-type: decimal; padding-bottom: 10px;}
 	  					<div id="autosave-test" data-model-name="something" data-bind-on-load data-model-autosave style="border: solid 1px grey; border-radius:4px; padding:15px;">	
 						<div class="form-group">
 								<label>First Input</label>
-								<input type="text" data-model="first_input" class="form-control">
+								<input type="number" data-model="first_input" class="form-control">
 							</div>
 							<div class="form-group">
 								<label>Second Input</label>
-								<input type="text" data-model="second_input" class="form-control">
+								<input type="number" data-model="second_input" class="form-control">
 							</div>
-							<p>Bound to first input: <span data-model="first_input"></span></p>
-							<p>Bound to second input: <span data-model="second_input"></span></p>
+							<p>Input 1 + Input 2 = <span data-model="total" data-model-calc></span></p>
 	  					</div>
 						<div id="autosave-notify"></div>
 						<p>Below is the example used in this page. Autosave had two events: <code>autosave-delay</code> and <code>autosave</code>.
@@ -407,7 +406,7 @@ ol>li { list-style-type: decimal; padding-bottom: 10px;}
 <script>
 
 
-$.binder.scope.something = {model:{ first_input : 'oh yeah!', second_input : 'can you dig it?' }};
+$.binder.scope.something = {model:{ first_input : 234, second_input : 654 }};
 
  $.binder.scope.obj = {model : {
 				property : 'test',
@@ -434,7 +433,11 @@ $('[data-model-name="something"]').on('autosave',function(e,data,modelname,model
 	$('#autosave-notify').html('<div class="alert alert-success">Saved:'+syntaxHighlight(JSON.stringify(data, undefined, 2))+' </div>');
 });
 
-
+$('[data-model-name="something"]').on('model-calc', function(e,self, scope, name, model, schema) {
+	console.log(model);
+	model.total = model.first_input + model.second_input;
+	binder_autosave(self, scope, 'total', model.total , model, schema);
+});
 
 $.binder.format = function(path, value, format, model, name) {
 			if ((value instanceof Array)&&(format == 'arrayjoin')){
