removed model for testing autosave and calculation to demo building of new model

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ ol>li { list-style-type: decimal; padding-bottom: 10px;}
 <script>
 
 
-$.binder.scope.something = {model:{ first_input : 234, second_input : 654 }};
+//$.binder.scope.something = {model:{ first_input : 234, second_input : 654 }};
 
  $.binder.scope.obj = {model : {
 				property : 'test',
