fixed binding of radios and included bootstrap hackyhack

--- a/index.html
+++ b/index.html
@@ -139,6 +139,11 @@ ol>li { list-style-type: decimal; padding-bottom: 10px;}
 							  </div>
 						  </div>
 						  <div class="form-group">
+								<label for="rtest"><input type="radio" name="rtest" data-model="gender" value="male">Male</label>
+								<label for="rtest"><input type="radio" name="rtest" data-model="gender" value="female">Female</label>
+								<label for="rtest"><input type="radio" name="rtest" data-model="gender" value="other">Other</label>
+						  </div>
+						  <div class="form-group">
 							  <label>A select</label>
 							  <select data-model="select" class="form-control"> <option>1</option> <option>2</option> <option>3</option> <option>4</option> <option>5</option> </select>
 						  </div>
